🐳 chore: add comments
